--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: csharp
 solution: Scrypt.sln
 script:
   - xbuild /p:Configuration=Release Scrypt.sln
+  - ls
+  - ls ./packages
   - mono ./packages/xunit.runner.*/tools/xunit.console.clr4.exe ./src/Scrypt.Tests/bin/Release/Scrypt.Tests.dll
