--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: csharp
 solution: Scrypt.sln
 install:
   - nuget restore Scrypt.sln
-  - nuget install xunit.runners -Version 1.9.2 -OutputDirectory testrunner
+  - nuget install xunit.runner.console -Version 2.1.0 -OutputDirectory testrunner
 script:
   - xbuild /p:Configuration=Release Scrypt.sln
-  - mono ./testrunner/xunit.runner.*/tools/xunit.console.clr4.exe ./src/Scrypt.Tests/bin/Release/Scrypt.Tests.dll
+  - find . -type d
+  - mono ./testrunner/xunit.runner.2.1.0/tools/xunit.console.exe ./src/Scrypt.Tests/bin/Release/Scrypt.Tests.dll
