--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
 script:
   - xbuild /p:Configuration=Release Scrypt.sln
   - find . -type d
-  - mono ./testrunner/xunit.runner.2.1.0/tools/xunit.console.exe ./src/Scrypt.Tests/bin/Release/Scrypt.Tests.dll
+  - mono ./testrunner/xunit.runner.console.2.1.0/tools/xunit.console.exe ./src/Scrypt.Tests/bin/Release/Scrypt.Tests.dll
