--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: csharp
 solution: Scrypt.sln
 install:
   - nuget restore Scrypt.sln
-  - nuget install xunit.runner.console -Version 2.1.0 -OutputDirectory packages
+  - nuget install xunit.runners -Version 1.9.2 -OutputDirectory packages
 script:
   - xbuild /p:Configuration=Release Scrypt.sln
-  - mono ./packages/xunit.runner.console.2.1.0/tools/xunit.console.exe ./src/Scrypt.Tests/bin/Release/Scrypt.Tests.dll
+  - mono ./packages/xunit.runners.1.9.2/tools/xunit.console.clr4.exe ./src/Scrypt.Tests/bin/Release/Scrypt.Tests.dll
