--- a/src/Scrypt/project.json
+++ b/src/Scrypt/project.json
@@ -1,5 +1,4 @@
 ﻿{
-  "name": "Scrypt.NET",
   "title": "Scrypt.NET",
   "version": "1.1.0",
   "description": "A .NET implementation of scrypt algorithm.",
@@ -26,8 +25,10 @@
         "define": [ "COREFX" ]
       },
       "dependencies": {
-        "NETStandard.Library": "1.5.0-rc2-24027",
-        "System.Security.Cryptography.Algorithms": "4.1.0-rc2-24027"
+        "System.Resources.ResourceManager": "4.0.1-*",
+        "System.Runtime": "4.1.0-*",
+        "System.Runtime.Extensions": "4.1.0-*",
+        "System.Security.Cryptography.Algorithms": "4.1.0-*"
       }
     }
   }
