Create one project for .NET2.0 and one for .NET Core

--- a/src/Scrypt.Tests/Scrypt.Tests.csproj
+++ b/src/Scrypt.Tests/Scrypt.Tests.csproj
@@ -61,16 +61,16 @@
     <Compile Include="ScryptEncoderTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Scrypt\Scrypt.csproj">
-      <Project>{f27e95a9-fc05-43d0-9801-00c496b497ea}</Project>
-      <Name>Scrypt</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Scrypt.Net20\Scrypt.Net20.csproj">
+      <Project>{F27E95A9-FC05-43D0-9801-00C496B497EA}</Project>
+      <Name>Scrypt.Net20</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
