--- a/src/Scrypt.Net20/Scrypt.Net20.csproj
+++ b/src/Scrypt.Net20/Scrypt.Net20.csproj
@@ -33,8 +33,10 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Scrypt\ScryptEncoder.cs">
+      <Link>ScryptEncoder.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScryptEncoder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
