--- a/Scrypt.nuspec
+++ b/Scrypt.nuspec
@@ -2,18 +2,20 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>Scrypt.NET</id>
-        <version>1.0.1</version>
+        <version>1.2.0</version>
         <title>Scrypt.NET</title>
         <authors>Vinicius Chiele</authors>
         <owners>Vinicius Chiele</owners>
         <projectUrl>https://github.com/viniciuschiele/scrypt</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>A .NET implementation of scrypt password hash algorithm. This library has been written purely in C#, it has no dependencies or P/Invoke</description>
-        <copyright>Vinicius Chiele</copyright>
+        <description>A .NET implementation of scrypt algorithm.</description>
+        <releaseNotes>1.2.0 - Fix issue
+1.1.0 - Add compatibility to .NET Core</releaseNotes>
         <language>en-US</language>
-        <tags>scrypt password hash hashing crypto cryptographic cryptography</tags>
+        <tags>scrypt,password,hash,hashing,crypto,cryptographic,cryptography</tags>
     </metadata>
     <files>
-        <file src="bin\Release\Scrypt.dll" target="lib\net20\Scrypt.dll" />
+        <file src="..\Documents\GitHub\Scrypt\src\Scrypt.Net20\bin\Release\Scrypt.dll" target="lib\net20\Scrypt.dll" />
+        <file src="..\Documents\GitHub\Scrypt\src\Scrypt.Core\bin\Release\netstandard1.4\Scrypt.dll" target="lib\netstandard1.4\Scrypt.dll" />
     </files>
 </package>
