--- a/src/Scrypt.Core/Scrypt.Core.csproj
+++ b/src/Scrypt.Core/Scrypt.Core.csproj
@@ -1,31 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.4</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Scrypt</AssemblyName>
     <AssemblyVersion>1.3.0</AssemblyVersion>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DebugType></DebugType>
-    <DefineConstants>DEBUG;TRACE;NETSTANDARD$(TargetFrameworkVersion_SubString(1));COREFX</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DebugType></DebugType>
-    <DefineConstants>TRACE;NETSTANDARD$(TargetFrameworkVersion_SubString(1));COREFX</DefineConstants>
+    <DefineConstants>$(DefineConstants);COREFX</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="**\*.cs" />
-    <Compile Include="..\Scrypt\ScryptEncoder.cs">
+    <Compile Include="../Scrypt/ScryptEncoder.cs">
       <Link>ScryptEncoder.cs</Link>
     </Compile>
   </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="NETStandard.Library" Version="1.6" />
-  </ItemGroup>
-
 </Project>
